<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <!-- tools:context=".LoginActivity" -->


    <TextView
        android:id="@+id/loginTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        style="@style/TextAppearance.MaterialComponents.Headline4">
    </TextView>

    <ImageView
        android:id="@+id/loginLogotype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logotype"
        android:layout_below="@id/loginLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

    </ImageView>

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_to_your_account"
        android:layout_below="@id/loginTitleTv"/>

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_above="@id/passwordTil"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login button -->

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_below="@id/passwordTil"
        android:layout_marginTop="20dp"
        android:theme="@style/Button.Blue"
        />

    <!-- Don't have account? SignUp -->

    <TextView
        android:id="@+id/noAccountTv"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/no_account"/>



</RelativeLayout>
