<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HowToPlayFragment"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="5dp">

    <ScrollView
        android:id="@+id/howToPlayScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/howToPlayBackBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. Reaction Time"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
                <ImageView
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:src="@drawable/reaction_time_icon"
                    android:layout_marginStart="10dp"
                    app:tint="@color/black">
                </ImageView>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reaction_time_help">

            </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/reaction_time_help"
                android:layout_margin="5dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reaction_time_help2">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. Delay Ability"
                    android:textStyle="bold"
                    android:textColor="@color/black">
                </TextView>
                <ImageView
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:src="@drawable/delay_ability_icon"
                    android:layout_marginStart="10dp"
                    app:tint="@color/black">
                </ImageView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay_ability_help">

            </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:padding="-10dp"
                android:src="@drawable/delay_ability_help"
                android:layout_margin="5dp">

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay_ability_help2">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. Switch Cost"
                    android:textStyle="bold"
                    android:textColor="@color/black">
                </TextView>
                <ImageView
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:src="@drawable/switch_cost_icon"
                    android:layout_marginStart="10dp"
                    app:tint="@color/black">
                </ImageView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_cost_help">

            </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/switch_cost_help"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp">

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_cost_help2">
            </TextView>
        </LinearLayout>

    </ScrollView>
    <ImageButton
        android:id="@+id/howToPlayBackBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:contentDescription="BACK"
        android:minHeight="48dp"
        android:src="@drawable/arrow_back_icon"
        app:layout_constraintTop_toBottomOf= "@id/howToPlayScrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent">

    </ImageButton>


</androidx.constraintlayout.widget.ConstraintLayout>